legacy-app/legacy-app.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: legacy-app
      app.kubernetes.io/component: legacy-app
      app.kubernetes.io/instance: legacy-app
    name: legacy-app
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/hguerreroo/legacy-app:latest
      from:
        kind: DockerImage
        name: quay.io/hguerreroo/legacy-app:latest
      name: latest
      referencePolicy:
        type: Local
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      app: legacy-app
      app.kubernetes.io/component: legacy-app
      app.kubernetes.io/instance: legacy-app
      app.kubernetes.io/part-of: enterprise-app
      app.openshift.io/runtime: php
    name: legacy-app
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: legacy-app
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 25%
        maxSurge: 25%
    template:
      metadata:
        labels:
          deployment: legacy-app
      spec:
        containers:
        - env:
          - name: SERVER_NAME
            value: mssql-server-linux
          image: ' '
          name: legacy-app
          ports:
          - containerPort: 80
            protocol: TCP
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: legacy-app
      app.kubernetes.io/component: legacy-app
      app.kubernetes.io/instance: legacy-app
    name: legacy-app
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      deployment: legacy-app
kind: List
metadata: {}
