legacy-app/legacy-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: legacy-app
  namespace: legacy-app
  labels:
    app: legacy-app
    app.kubernetes.io/component: legacy-app
    app.kubernetes.io/instance: eventdriven-demo-legacy-app
spec:
  to:
    kind: Service
    name: legacy-app
  tls:
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 80-tcp
